#129628 - [TCR - sharable libraries] use URI for relative values instead of URL